@@ -20,6 +20,7 @@ Verilator 4.201 devel
 * Fix exceeding command-line ar limit (#2834). [Yinan Xu]
 * Fix false $dumpfile warning on model save (#2834). [Yinan Xu]
 * Fix --timescale-override not suppressing TIMESCALEMOD (#2838). [Kaleb Barrett]
+* Fix false TIMESCALEMOD on generate-ignored instances (#2838). [Kaleb Barrett]
 
 
 Verilator 4.200 2021-03-12
